--- a/elabreport.ipynb
+++ b/elabreport.ipynb
@@ -15,8 +15,8 @@
    },
    "outputs": [],
    "source": [
-    "USERNAME = \"USERNAME\" # replace here\n",
-    "PASSWORD = \"PASSWORD\" # replace here\n",
+    "USERNAME = \"RA1711003030219\" # replace here\n",
+    "PASSWORD = \"Akshat3133\" # replace here\n",
     "ELAB = \"ELAB\" \n",
     "\n",
     "# replace above ELAB with : (don't remove the quotes)\n",
